--- a/src/css/app.css
+++ b/src/css/app.css
@@ -28,3 +28,14 @@ a{
     text-align: center;
     padding-top:50%;
 }
+.spinning{
+    animation: spinning 1s linear infinite;
+}
+@keyframes spinning {
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(-360deg);
+    }
+}
